fixed text alignment in download button to properly display in middle instead of on bottom of button

--- a/src/pages/Styles/Resume.css
+++ b/src/pages/Styles/Resume.css
@@ -47,6 +47,9 @@ a {
     padding: 5px;
     border-color: black;
     background-color: antiquewhite;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 0px;
 }
 
 .resBtn:hover {
